@@ -29,6 +29,9 @@ Release 2.7.1 - UNRELEASED
     MAPREDUCE-6324. Fixed MapReduce uber jobs to not fail the udpate of AM-RM
     tokens when they roll-over. (Jason Lowe via vinodkv)
 
+    MAPREDUCE-6339. Job history file is not flushed correctly because isTimerActive 
+    flag is not set true when flushTimerTask is scheduled. (zhihai xu via devaraj)
+
 Release 2.7.0 - 2015-04-20
 
   INCOMPATIBLE CHANGES
